MLS-72 MockBean deprecated (#18)