@@ -6,16 +6,17 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.net.URL;
+import java.net.URI;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 @AutoConfigureMockMvc
@@ -24,19 +25,20 @@ class ApiUrlShortenerControllerTest {
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @MockitoBean
     private ShortenerServiceImpl shortenerServiceImpl;
 
     @BeforeEach
     void setUp() throws Exception {
         when(shortenerServiceImpl.shorten(anyString(), any()))
-                .thenReturn(new URL("https://short.url").toString());
+                .thenReturn(URI.create("https://short.url").toURL().toString());
     }
 
     @Test
     void getShort() throws Exception {
-        mockMvc.perform(get("/api/url-shortener/shorten")
-                        .param("url", "https://www.example.com"))
+        mockMvc.perform(
+                        get("/api/url-shortener/shorten").param("url", "https://www.example.com")
+                )
                 .andExpect(status().isOk())
                 .andExpect(content().string("https://short.url"));
     }
